[project]
name = "carrybag"
version = "0.1.0"
description = "Alzheimer's Classification using YOLO"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "flask>=3.0.0",
    "ultralytics>=8.0.0",
    "pillow>=10.0.0",
    "opencv-python>=4.8.0",
    "numpy>=1.24.0",
    "torch>=2.0.0",
    "torchvision>=0.15.0"
]
